Bandgap: add loop stability sim
Gain margin = 7dB, phase margin = 25deg. One corner unity-gain freq is 0.2MHz -> could cascoding help with varying Vds?

--- a/sim/LELO_GR04_BG/Makefile
+++ b/sim/LELO_GR04_BG/Makefile
@@ -15,7 +15,7 @@ include ../../tech/make/sim.make
 
 # Running all testbenches
 all:
-# make -j 3 typical etc mc TB=lstb
+	make -j 3 typical etc mc TB=lstb
 	make -j 3 typical etc mc TB=tran
 # make -j 3 typical etc mc TB=dc
 	make summary
