Bandgap: X1->X4 compensation pm=59deg gm=-16dB
Can use lead compensation too, with area cost

--- a/sim/LELO_GR04_BG/Makefile
+++ b/sim/LELO_GR04_BG/Makefile
@@ -19,6 +19,7 @@ all:
 	make -j 3 typical etc mc TB=tran
 # make -j 3 typical etc mc TB=dc
 	make summary
+	make html
 
 test:
 	${MAKE} typical OPT="Debug"
@@ -53,6 +54,8 @@ summary:
 slide:
 	pandoc -s  -t slidy README.md -o README.html
 
+html:
+	pandoc -s README.md -o README.html
 
 clean:
 	-rm -rf output_*
