--- a/info.yaml
+++ b/info.yaml
@@ -5,14 +5,17 @@ author: Anonymous
 # Your github username
 github: analogicus
 # Something funny and descriptive
-tagline: The answer is 42
+tagline: Temperature sensor
 # Your email, if you so wish
 email: anon@anon.com
 # Your github site, usually <github username>.github.io
 url: analogicus.github.io
 doc:
   # Make docs
-  #libraries:
-  #   <library>:
-  #       - <cell>
-  #       - <cell>
+  libraries:
+    LELO_GR04_SKY130A:
+      # - LELO_GR04
+      - LELO_GR04_BG
+      - LELO_GR04_BG_BJT
+      - LELO_GR04_BG_OTA_PMOS
+      - LELO_GR04_BG_OUTPUT
